[package]
name = "reticulum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ed25519-dalek = "2.1.0"
env_logger = "0.11.1"
hex = "0.4.3"
log = "0.4.20"
nom = "7.1.3"
sha2 = "0.10.8"
x25519-dalek = "2.0.0"
