[package]
name = "reticulum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = "4.1.2"
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
env_logger = "0.11.1"
hex = "0.4.3"
log = "0.4.20"
nom = "7.1.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
sha2 = "0.10.8"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }

[dev-dependencies]
rand = "0.8.5"
