[package]
name = "reticulum-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
cbc = "0.1.2"
curve25519-dalek = "4.1.2"
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
hex = { package = "hex-conservative", version = "0.2", default-features = false }
hkdf = "0.12.4"
hmac = "0.12.1"
log = "0.4.20"
nom = "7.1.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
rmp = { version = "0.8.12", default-features = false }
sha2 = "0.10.8"
x25519-dalek = { version = "2.0.0", features = ["static_secrets"] }

[dev-dependencies]
rand = "0.8.5"
hex-literal = "0.4"