[package]
name = "reticulum-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reticulum-core = { path = "../reticulum-core" }
reticulum-net = { path = "../reticulum-net" }
rand_core = { version = "0.6.4", features = ["getrandom"] }
rand = "0.8.5"

[dev-dependencies]
