[package]
name = "reticulum_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
reticulum_core = { path = "../reticulum-core" }
reticulum_net = { path = "../reticulum-net" }
rand_core = { version = "0.6", features = ["getrandom"] }
rand = "0.8"
hex = "0.4"

[dev-dependencies]
