[package]
name = "reticulum-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
hex = { package = "hex-conservative", version = "0.2", default-features = false }
log = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
reticulum-core = { path = "../reticulum-core" }
