[package]
name = "reticulum_net"
version = "0.0.1-alpha.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11"
hex = { package = "hex-conservative", version = "0.3", default-features = false }
log = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
reticulum = { path = "../reticulum" }
