[package]
name = "reticulum"
version = "0.0.1-alpha.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://jirijakes.com/code/rust-reticulum"
description = "Experimental implementation of Reticulum"
keywords = ["mesh", "networking", "distributed"]
exclude = ["justfile"]

[dependencies]
aes = "0.8"
cbc = "0.1"
curve25519-dalek = "4.1"
ed25519-dalek = { version = "2.1", features = ["rand_core", "digest"] }
hex = { package = "hex-conservative", version = "0.2", default-features = false }
hkdf = "0.12"
hmac = "0.12"
log = "0.4"
nom = "7.1"
rand_core = { version = "0.6", features = ["getrandom"] }
rmp = { version = "0.8", default-features = false }
sha2 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

[dev-dependencies]
rand = "0.8"
hex-literal = "0.4"
hex = { package = "hex-conservative", version = "0.2", default-features = true }